# ComputerGraphics-s_AwesomeOpenGLPrjct

./: .gitignore  README.md
app_Protype/OpenGLApp/: OpenGLApp.sln
app_Protype/OpenGLApp/OpenGLApp/: Bard.cpp  Bard.h  Customer.cpp  Customer.h  Dirt.cpp  Dirt.h  FoodStations.cpp  Game.cpp  Game.h  Main.cpp  Mesh.h  Model.h  OpenGLApp.aps  OpenGLApp.vcxproj  OpenGLApp.vcxproj.filters  Player.cpp  Player.h  TavernObjects.cpp  TavernObjects.h  Wizard.cpp  Wizard.h  model3D_shader.fs  model3D_shader.vs  shader.fs  shader.vs
app_Protype/OpenGLApp/OpenGLApp/Debug/: vc143.idb
app_Protype/OpenGLApp/OpenGLApp/Debug/OpenGLApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLApp.lastbuildstate
app_Protype/OpenGLApp/OpenGLApp/resources/models/counter/: counter.mtl
app_Protype/OpenGLApp/OpenGLApp/resources/models/counter2/: bancone2.mtl
app_Protype/OpenGLApp/OpenGLApp/resources/models/table/: table.mtl
app_Protype/OpenGLApp/OpenGLApp/resources/models/table2/: table2.mtl
app_Protype/OpenGLApp/OpenGLApp/x64/Debug/: OpenGLApp.exe.recipe  OpenGLApp.ilk  vc143.idb
app_Protype/OpenGLApp/OpenGLApp/x64/Debug/OpenGLApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app_tavernGame/: CMakeLists.txt
app_tavernGame/include/: Player.h  camera.h
app_tavernGame/shaders/: shader.fs
app_tavernGame/src/: Bard.h  Customer.h  FoodStations.cpp  FoodStations.h  Main.cpp  Wizard.cpp
app_tavernGame/textures/: Beer.piskel  roundTable.xcf  stool.xcf
sources/images/: table.mtl
